--- a/opdracht 4.2/style.css
+++ b/opdracht 4.2/style.css
@@ -1,31 +1,49 @@
 h1 {
     font-size: 24px;
-    color: blue;
+    color: rgb(255, 0, 0) ;
     font-weight: bold;
-    font-style: italic;
-}
 
+}
 h2 {
     font-size: 20px;
     color: #0000ff;
     font-weight: bold;
 }
-
 h3 {
-    font-size: 16px;
-    color: teal;
-    font-weight: bold;
+    font-size: 13px;
+    color:teal;
+    font-weight:bold;
 }
-
 p {
-    color: #4D4D4D;
+    color:#00d331; 
 }
+.dik {
+    font-weight:bold
 
-.bold1 {
-    font-weight: bold;
 }
 
 a {
-    color: #8A2BE2;
+    color:#8A2BE2;
     text-decoration: none;
+}
+
+
+
+header {
+   width: 100%;
+   height: 33%;
+}
+
+header {
+    background-image: url("Nitro_Wallpaper_5000x2813.jpg");
+    margin:auto
+}
+img  {
+    width:50%;
+}
+article {
+    border-width: 5px;
+    border-style: solid;
+    border-left-width: 10px;
+    border-radius: 15px;
 }
