--- a/opdracht_3.1/style.css
+++ b/opdracht_3.1/style.css
@@ -39,7 +39,7 @@ nav img {
   width: 5vw;
 }
 header {
-  background-image: url("./img/background-image.jpg");
+  background-image: url("./haaker.png");
   color:white;
 
 }
@@ -63,7 +63,7 @@ h2 {
 
 header {
   
-  background-image:url("aardappel.jpg");
+  background-image:url("./img/hacker2.png");
   width:100vw;
   height: 130vh;
   background-size: cover;
@@ -130,7 +130,49 @@ top: 15rem;
 left: 15rem;
 }
 
+.jaar_2 {
+  font-size: 2.5rem;
+  padding: 0 4rem 0 4rem;;
+}
+
+.dropbtn {
+  background-color: #00a8c7;
+  color: white;
+  padding: 1.6rem;
+  font-size: 1.6rem;
+  border: none;
+}
+
+
 .dropdown {
   position: relative;
   display: inline-block;
 }
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #E9E9E9;
+  min-width: 16rem;
+  box-shadow: 0rem 0.8rem 1.6rem 0rem rgba(0,0,0,0.2);
+  z-index: 1;
+  color: #00a8c7;
+}
+
+.dropdown-content a {
+  color: #00a8c7;
+  padding: 1.2rem 1.6rem;
+  text-decoration: none;
+  display: block;
+  font-size: 1.4rem;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+
+.dropdown:hover .dropdown-content {display: block;
+}
+
+
+.dropdown:hover .dropbtn {background-color:white; color:#00a8c7;};
